# StoreAPI

src/: Makefile  pyproject.toml
src/store/: main.py
src/store/controllers/: product.py
src/store/core/: config.py  exception.py
src/store/database/: mongo.py
src/store/models/: base.py  product.py
src/store/schemas/: base.py  product.py
src/store/usecases/: product.py
src/tests/: conftest.py  factories.py
src/tests/controllers/: test_product.py
src/tests/schemas/: factories.py  test_product.py
src/tests/usecases/: test_product.py
